--- a/lienhe.html
+++ b/lienhe.html
@@ -33,7 +33,7 @@
         <div class="row" style="background-color: #F5F7F9; padding-top: 3rem;">
             <div class="offset-xl-8 offset-lg-7 offset-md-6 offset-sm-4 d-sm-block d-none">  
                 <ul>
-                    <li><a class="hover" href="trangchu.html">TRANG CHỦ</a></li>
+                    <li><a class="hover" href="/">TRANG CHỦ</a></li>
                     <li><a class="hover" href="gioithieu.html" >GIỚI THIỆU</a></li>
                     <li><a class="hover" href="lienhe.html" style="color: #FF5400;">LIÊN HỆ</a></li>
                 </ul>
@@ -51,7 +51,7 @@
             </div>
             <div class="sidebar d-sm-none">
                 <ul>
-                    <li style="margin-top:1rem"><a class="hover" href="trangchu.html">TRANG CHỦ</a></li>
+                    <li style="margin-top:1rem"><a class="hover" href="/">TRANG CHỦ</a></li>
                     <li><a class="hover" href="gioithieu.html" >GIỚI THIỆU</a></li>
                     <li><a class="hover" style="color: #FF5400;" href="lienhe.html">LIÊN HỆ</a></li>
                 </ul>
