--- a/index.html
+++ b/index.html
@@ -73,20 +73,21 @@
                                 </div>
                             </div>
                         </header>
-                            <nav class="container-fluid " >
-                                <div class="justify-content-center" style=" padding-top: 3rem;">
-                                    <div class="d-sm-flex justify-content-center d-none">  
-                                        <ul>
-                                            <li><a class="hover2" style="color: yellow;" href="/">TRANG CHỦ</a></li>
-                                            <li><a class="hover2" style="color: white;" href="/gioi-thieu/">GIỚI THIỆU</a></li>
-                                            <li><a class="hover2" style="color: white;" href="/lien-he/">LIÊN HỆ</a></li>
-                                        </ul>
-                                    </div>
+                        <nav class="container-fluid " >
+                            <div class="justify-content-center" style=" padding-top: 3rem;">
+                                <div class="d-sm-flex justify-content-center d-none">  
+                                    <ul>
+                                        <li><a class="hover2" style="color: yellow;" href="/">TRANG CHỦ</a></li>
+                                        <li><a class="hover2" style="color: white;" href="/gioi-thieu/">GIỚI THIỆU</a></li>
+                                        <li><a class="hover2" style="color: white;" href="/lien-he/">LIÊN HỆ</a></li>
+                                    </ul>
                                 </div>
+                            </div>
                         </nav>
-                </div>
+                        <div style="" class="justify-content-center d-flex"><h1 style="color: red;font-size: 3rem; font-weight: bold;">DU LỊCH ĐỨC LINH</h1></div>
+                        <div class="justify-content-center d-flex"><h5 style="color: gold;">CHO THUÊ XE DU LỊCH 16 CHỖ RẺ NHẤT SÀI GÒN</h5></div>
+                    </div>
             </div>
-            
         </div>
     </div>
 
