--- a/gioi-thieu/index.html
+++ b/gioi-thieu/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Pls delete-->
+    <meta name="robots" content="noindex, nofollow">
+    <!--Pls delete-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
     <title>Giới thiệu - Cho thuê xe du lịch Đức Linh</title>
