--- a/index.html
+++ b/index.html
@@ -87,8 +87,11 @@
                                 </div>
                             </div>
                         </nav>
-                        <div style="" class="justify-content-center d-flex"><h1 style="color: red;font-size: 3rem; font-weight: bold;">DU LỊCH ĐỨC LINH</h1></div>
-                        <div class="justify-content-center d-flex"><h5 style="color: gold;">CHO THUÊ XE DU LỊCH 16 CHỖ RẺ NHẤT SÀI GÒN</h5></div>
+                        <div class="dldl">
+                          <div style="" class="justify-content-center d-flex"><h1 style="color: red;font-size: 3rem; font-weight: bold;">DU LỊCH ĐỨC LINH</h1></div>
+                          <div class="justify-content-center d-flex"><h5 style="color: gold;">CHO THUÊ XE DU LỊCH 16 CHỖ RẺ NHẤT SÀI GÒN</h5></div>
+                        </div>
+                        
                     </div>
             </div>
         </div>
