--- a/gioi-thieu/index.html
+++ b/gioi-thieu/index.html
@@ -3,6 +3,7 @@
 <head>
     <!--Pls delete-->
     <meta name="robots" content="noindex, nofollow">
+    <script>window.location.href= "https://ngoaingudatsan.com/"</script>
     <!--Pls delete-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
