--- a/index.html
+++ b/index.html
@@ -1457,7 +1457,7 @@
         <div>
             <div class="zalo"><a href="https://zalo.me/0902395178"><img src="img/contact-ico/zalo.png" alt=""></a></div>
             <span style="margin-left: 10px;" class="bubble">Chat Zalo</span>
-            <a href="https://zalo.me/0902395178" style="background-color: #008FE5;letter-spacing: 0.5px; color: black;">Chat SMS</a>
+            <a href="https://zalo.me/0902395178" style="background-color: #008FE5;letter-spacing: 0.5px; color: black;">Chat Zalo</a>
         </div>
         <div>
             <div class="messenger"><a href="https://m.me/100027885159049"><img src="img/contact-ico/mess.png" alt=""></a></div>
