--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--Pls delete-->
-  <script>window.location.href= "https://ngoaingudatsan.com/"</script>
-  <meta name="robots" content="noindex, nofollow">
-  <!--Pls delete-->
+  <link rel="canonical" href="https://duclinhtravel.com/" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
     <title>Cho thuê xe du lịch 16 chỗ giá rẻ tại Tp. Hồ Chí Minh</title>
