--- a/gioi-thieu/index.html
+++ b/gioi-thieu/index.html
@@ -4,7 +4,7 @@
     <link rel="canonical" href="https://duclinhtravel.com/" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-    <title>Giới thiệu - Cho thuê xe du lịch Đức Linh</title>
+    <title>Giới thiệu - Cho thuê xe du lịch Đức Linh Travel</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
@@ -25,7 +25,7 @@
             <div class="row align-items-center justify-content-center">
                 <div style="margin: 0;" class="col-lg-2 col-md-4 header-text"><h6 style="display: inline-block;margin-right: 8px;"><i class="fa fa-phone" style="color: #FF5400;transform: scaleX(-1);"></i></h6>Hotline: 0902.395.178</div>
                 <div style="margin: 0;" class="col-lg-3 col-md-5  header-text"><h6 style="display: inline-block;margin-right: 8px;"><i class="fa fa-envelope-o" style="color: #FF5400;transform: scaleX(-1);"></i></h6> E-mail: info@dulichduclinh.com</div>
-                <div style="margin: 0;" class="col-lg-2 col-md-3"><img src="img/duclinh.png" alt="Cho thuê xe du lịch Đức Linh"></div>
+                <div style="margin: 0;" class="col-lg-2 col-md-3"><img src="img/duclinh.png" alt="Cho thuê xe du lịch Đức Linh Travel"></div>
                 <div style="margin: 0;" class="text-md-center text-lg-start col-lg-4 header-text">Quý khách cần thuê xe, vui lòng <span style="color: #FF5400;">Liên hệ</span> : 0902.395.178</div>
             </div>
         </div>
@@ -64,9 +64,9 @@
     <div class="container-md">
         <div class="row main-topic">
             <div class="col-lg-6 col-md-5 col-12" id="infor">
-                <h3 class="title">Cho thuê xe du lịch <em>Đức Linh</em><div><img src="img/stripe.png" alt=""></div></h3>
+                <h3 class="title">Cho thuê xe du lịch <em>Đức Linh Travel</em><div><img src="img/stripe.png" alt=""></div></h3>
                 <p id="debug"></p>
-                <p class="para">Cho thuê xe Du Lịch Đức Linh là doanh nghiệp hoạt động chính ở lĩnh vực cho thuê xe du lịch, cho thuê xe tự lái, hợp đồng cho thuê xe tháng, cho thuê xe đưa rước chuyên gia nước ngoài, dịch vụ xe hoa, xe cưới… Bao gồm các dòng xe <strong>4 chỗ, 7 chỗ, 16 chỗ</strong>  từ phổ thông đến cao cấp. Đáp ứng kịp thời và hiệu quả được nhu cầu khách hàng từ khắp nơi.</p>  
+                <p class="para">Cho thuê xe Du Lịch Đức Linh Travel là doanh nghiệp hoạt động chính ở lĩnh vực cho thuê xe du lịch, cho thuê xe tự lái, hợp đồng cho thuê xe tháng, cho thuê xe đưa rước chuyên gia nước ngoài, dịch vụ xe hoa, xe cưới… Bao gồm các dòng xe <strong>4 chỗ, 7 chỗ, 16 chỗ</strong>  từ phổ thông đến cao cấp. Đáp ứng kịp thời và hiệu quả được nhu cầu khách hàng từ khắp nơi.</p>  
                 <p class="para">Cho thuê xe du lịch mới luôn đáp ứng nhanh mọi nhu cầu thuê xe đi lại của khách hàng.</p>
                 <p class="para">Đảm bảo về chất lượng và số lượng nguồn xe để cung cấp đến khách hàng.</p>
                 <p class="para">Đội ngũ nhân viên nhiệt tình và chu đáo.</p>
