--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <div class="row align-items-center justify-content-center">
                                     <div class="col-lg-2 col-md-4 header-text" style="color: gray;"><h6 style="display: inline-block;margin-right: 8px;"><i class="fa fa-phone" style="color: #FF5400;transform: scaleX(-1);"></i></h6>Hotline: 0902.395.178</div>
                                     <div class="col-lg-3 col-md-5  header-text" style="color: gray;"><h6 style="display: inline-block;margin-right: 8px;"><i class="fa fa-envelope-o" style="color: #FF5400;transform: scaleX(-1);"></i></h6> E-mail: info@dulichduclinh.com</div>
-                                    <div class="col-lg-2 col-md-3"><img src="img/duclinh.png" alt="Cho thuê xe du lịch Đức Linh"></div>
+                                    <div class="col-lg-2 col-md-3"><img src="img/duclinh.png" alt="Cho thuê xe Đức Linh Travel"></div>
                                     <div class="text-md-center text-lg-start col-lg-4 header-text" style="color: gray;">Quý khách cần thuê xe, vui lòng <span style="color: #FF5400;">Liên hệ</span> : 0902.395.178</div>
                                 </div>
                             </div>
@@ -86,7 +86,7 @@
                             </div>
                         </nav>
                         <div class="dldl">
-                          <div style="" class="justify-content-center d-flex"><h1 style="color: red;font-size: 3rem; font-weight: bold;">DU LỊCH ĐỨC LINH</h1></div>
+                          <div style="" class="justify-content-center d-flex"><h1 style="color: red;font-size: 3rem; font-weight: bold;">ĐỨC LINH TRAVEL</h1></div>
                           <div class="justify-content-center d-flex"><h5 style="color: gold;">CHO THUÊ XE DU LỊCH 16 CHỖ RẺ NHẤT SÀI GÒN</h5></div>
                         </div>
                         
@@ -118,7 +118,7 @@
         <div class="row main-topic">
             <div class="col-lg-6 col-md-5 col-12" id="infor">
                 <h3 class="title">Cho thuê xe du lịch <em>Đức Linh</em><div class="stripe"><img src="img/stripe.png" alt=""></div></h3>
-                <p class="para">Cho thuê xe Du Lịch Đức Linh là doanh nghiệp hoạt động chính ở lĩnh vực cho thuê xe du lịch, cho thuê xe tự lái, hợp đồng cho thuê xe tháng, cho thuê xe đưa rước chuyên gia nước ngoài, dịch vụ xe hoa, xe cưới… Bao gồm các dòng xe <strong>4 chỗ, 7 chỗ, 16 chỗ</strong>  từ phổ thông đến cao cấp. Đáp ứng kịp thời và hiệu quả được nhu cầu khách hàng từ khắp nơi.</p>  
+                <p class="para">Cho thuê xe Đức Linh Travel là doanh nghiệp hoạt động chính ở lĩnh vực cho thuê xe du lịch, cho thuê xe tự lái, hợp đồng cho thuê xe tháng, cho thuê xe đưa rước chuyên gia nước ngoài, dịch vụ xe hoa, xe cưới… Bao gồm các dòng xe <strong>4 chỗ, 7 chỗ, 16 chỗ</strong>  từ phổ thông đến cao cấp. Đáp ứng kịp thời và hiệu quả được nhu cầu khách hàng từ khắp nơi.</p>  
                 <p class="para">Cho thuê xe du lịch mới luôn đáp ứng nhanh mọi nhu cầu thuê xe đi lại của khách hàng.</p>
                 <p class="para">Đảm bảo về chất lượng và số lượng nguồn xe để cung cấp đến khách hàng.</p>
                 <p class="para">Đội ngũ nhân viên nhiệt tình và chu đáo.</p>
@@ -141,7 +141,7 @@
             <div>
                 <h4>BẢNG BÁO GIÁ CHÍNH THỨC XE 16 ĐI CÁC TỈNH</h4>
                 <div class="stripe" style="margin-top: -0.5rem;margin-bottom: 1rem;"><img src="img/stripe.png" alt=""></div>
-                <p class="para" style="text-align: center;">Đức Linh cho thuê xe du lịch 16 chỗ giá rẻ tại Tp. Hồ Chí Minh</p>
+                <p class="para" style="text-align: center;">Đức Linh Travel cho thuê xe du lịch 16 chỗ giá rẻ tại Tp. Hồ Chí Minh</p>
             </div>
             
         </div>
