--- a/lien-he/index.html
+++ b/lien-he/index.html
@@ -4,7 +4,7 @@
     <link rel="canonical" href="https://duclinhtravel.com/" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-    <title>Liên hệ - Cho thuê xe du lịch Đức Linh</title>
+    <title>Liên hệ - Cho thuê xe du lịch Đức Linh Travel</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
@@ -25,7 +25,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-2 col-md-4 header-text"><h6 style="display: inline-block;margin-right: 8px;"><i class="fa fa-phone" style="color: #FF5400;transform: scaleX(-1);"></i></h6>Hotline: 0902.395.178</div>
                 <div class="col-lg-3 col-md-5  header-text"><h6 style="display: inline-block;margin-right: 8px;"><i class="fa fa-envelope-o" style="color: #FF5400;transform: scaleX(-1);"></i></h6> E-mail: info@dulichduclinh.com</div>
-                <div class="col-lg-2 col-md-3"><img src="img/duclinh.png" alt="Cho thuê xe du lịch Đức Linh"></div>
+                <div class="col-lg-2 col-md-3"><img src="img/duclinh.png" alt="Cho thuê xe du lịch Đức Linh Travel"></div>
                 <div class="text-md-center text-lg-start col-lg-4 header-text">Quý khách cần thuê xe, vui lòng <span style="color: #FF5400;">Liên hệ</span> : 0902.395.178</div>
             </div>
         </div>
@@ -64,7 +64,7 @@
     <div class="container-md">
         <div class="row gx-md-6 gy-3">
             <div class="col-md-9 col-12">
-                <h3 class="title">Cho thuê xe du lịch Đức Linh <div><img src="img/stripe.png" alt=""></div></h3>
+                <h3 class="title">Cho thuê xe du lịch Đức Linh Travel <div><img src="img/stripe.png" alt=""></div></h3>
                 <p class="para">Đ/c: đường 160, Quận 9, Tp. Hồ Chí Minh</p>
                 <p class="para">ĐT: 0902.395.178</p>
                 <p class="para">Email: info@dulichduclinh.com</p>
