--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="canonical" href="https://duclinhtravel.com/" />
     <meta charset="UTF-8">
+    <meta name="description" content="Cho thuê xe du lịch Đức Linh Cho thuê xe Đức Linh Travel là doanh nghiệp hoạt động chính ở lĩnh vực cho thuê xe du lịch, cho thuê xe tự lái, hợp đồng cho thuê xe tháng, cho thuê xe đưa rước chuyên gia nước ngoài, dịch vụ xe hoa, xe cưới… Bao gồm các dòng xe 4 chỗ, 7 chỗ, 16 chỗ từ phổ thông đến cao cấp. Đáp ứng kịp thời và hiệu quả được nhu cầu khách hàng từ khắp nơi."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
     <title>Cho thuê xe du lịch 16 chỗ giá rẻ tại Tp. Hồ Chí Minh</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
