--- a/lien-he/index.html
+++ b/lien-he/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
     <title>Liên hệ - Cho thuê xe du lịch Đức Linh Travel</title>
+    <meta name="description" content="Đ/c: đường 160, Quận 9, Tp. Hồ Chí Minh ĐT: 0902.395.178 Email: info@dulichduclinh.com" />
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
