--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Cho thuê xe du lịch 16 chỗ giá rẻ tại Tp. Hồ Chí Minh</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script><script id='autoAdsMaxLead-widget-script' src='https://cdn-onmar.novaontech.com/scripts/autoads-maxlead-widget.js?business_id=4ABC697AC1154638A41A1C511FF33A6D' type='text/javascript' charset='UTF-8' async></script>
+
   
     <!--Muli import-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1466,5 +1466,8 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <!--Start of AutoAds Tracking Code-->
+<script id='autoAdsMaxLead-widget-script' src='https://cdn-onmar.novaontech.com/scripts/autoads-maxlead-widget.js?business_id=4ABC697AC1154638A41A1C511FF33A6D' type='text/javascript' charset='UTF-8' async></script>
+<!--End of AutoAds Tracking Code-->
 </body>
 </html>
