--- a/gioi-thieu/index.html
+++ b/gioi-thieu/index.html
@@ -8,6 +8,19 @@
     <title>Giới thiệu - Cho thuê xe du lịch Đức Linh Travel</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,4997111,4,1,120,40,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4997111&101" alt="" border="0"></a></noscript>
+<!-- Histats.com  END  -->
+
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
     <!--Muli import-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
