Integrate Google Analytics tracking script
Added Google Analytics tracking script to the head section.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11052034854"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11052034854');
+</script>
   <link rel="canonical" href="https://duclinhtravel.com/" />
     <meta charset="UTF-8">
     <title>Cho thuê xe du lịch Đức Linh Travel</title>
