Integrate Google Tag Manager in index.html
Added Google Tag Manager script for tracking.

--- a/gioi-thieu/index.html
+++ b/gioi-thieu/index.html
@@ -3,6 +3,15 @@
 <head>
     <link rel="canonical" href="https://duclinhtravel.com/" />
     <meta charset="UTF-8">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11052034854"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11052034854');
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
     <meta name="description" content="Cho thuê xe du lịch Đức Linh Cho thuê xe Đức Linh Travel là doanh nghiệp hoạt động chính ở lĩnh vực cho thuê xe du lịch, cho thuê xe tự lái, hợp đồng cho thuê xe tháng, cho thuê xe đưa rước chuyên gia nước ngoài, dịch vụ xe hoa, xe cưới… Bao gồm các dòng xe 4 chỗ, 7 chỗ, 16 chỗ từ phổ thông đến cao cấp. Đáp ứng kịp thời và hiệu quả được nhu cầu khách hàng từ khắp nơi."/>
     <title>Giới thiệu - Cho thuê xe du lịch Đức Linh Travel</title>
